Update README.md
It was still the description from before Aeronautics released :skull: